# victor-coding

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: ANALYSIS_SUMMARY.md  REFACTORING_PLAN.md
native/: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
native/src/: chunker.rs  lib.rs  python.rs  regex_utils.rs
tests/: test_api_router_provider.py  test_coding_capabilities.py  test_coding_vertical_rl.py  test_coding_vertical_teams.py  test_coding_vertical_workflows.py  test_enhanced_integration.py  test_extension_cache.py
tests/chunker/: test_ast_chunker.py  test_chunker.py
tests/codebase/: test_decomposed_analyzer.py  test_symbol_resolver.py  test_symbol_store.py
tests/contract/: test_contract_boundary_contract.py  test_core_ast_helpers_contract.py  test_plugin_contract.py  test_sdk_boundary_contract.py
tests/indexers/: test_airgapped_codebase_search.py  test_codebase_analyzer.py  test_indexer.py  test_indexer_cpp.py  test_indexer_edge_extraction.py  test_indexer_graph_integration.py  test_indexer_multilang_tree_sitter.py  test_tree_sitter_extractor.py  test_tree_sitter_manager.py
tests/integration/: test_code_search_tool.py  test_documentation_tool.py  test_lsp.py  test_lsp_tool.py  test_query_expander.py  test_vertical_integration.py
tests/middleware/: test_middleware_chain.py
tests/performance/: __init__.py  conftest.py  test_benchmarks.py  test_chunking_fallback.py  test_complete_fallback.py  test_registry.py  test_wrappers.py
tests/protocols/: test_coverage_protocol_impl.py  test_docgen_protocol_impl.py  test_refactor_protocol_impl.py  test_review_protocol_impl.py  test_testgen_protocol_impl.py  test_vertical_extensions.py
tests/rl/: test_config_framework.py  test_rl_config_protocol.py
tests/safety/: test_safety_integration.py
tests/skills/: test_coding_skills.py
tests/tools/: test_tool_dependency_loader.py
victor_coding/: __init__.py  assistant.py  capabilities.py  codebase_analyzer.py  composed_chains.py  conversation_enhanced.py  enrichment.py  escape_hatches.py  handlers.py  middleware.py  mode_config.py  plugin.py  prompts.py  protocols.py  safety.py  safety_enhanced.py  service_provider.py  skills.py  tool_dependencies.py  tool_dependencies.yaml  victor-vertical.toml
victor_coding/api/: __init__.py  router_provider.py
victor_coding/codebase/: __init__.py  architecture_analyzer.py  chunker.py  ignore_patterns.py  indexer.py  query_expander.py  symbol_extractor.py  symbol_resolver.py  symbol_store.py  tree_sitter_extractor.py  tree_sitter_manager.py  unified_extractor.py
victor_coding/codebase/embeddings/: __init__.py  base.py  chromadb_provider.py  chunker.py  lancedb_provider.py  models.py  proximadb_provider.py  registry.py
victor_coding/codebase/graph/: __init__.py  protocol.py  registry.py
victor_coding/compat/: settings.py
victor_coding/completion/: __init__.py  manager.py  protocol.py  provider.py  registry.py
victor_coding/completion/providers/: __init__.py  ai.py  lsp.py  snippet.py
victor_coding/coverage/: __init__.py  manager.py  parser.py  protocol.py  visualizer.py
victor_coding/coverage/parsers/: __init__.py
victor_coding/docgen/: __init__.py  formatter.py  manager.py  parser.py  protocol.py
victor_coding/editing/: __init__.py  editor.py
victor_coding/languages/: __init__.py  base.py  manager.py  registry.py  tiers.py
victor_coding/languages/plugins/: __init__.py  additional.py  config.py  cpp.py  go.py  java.py  javascript.py  python.py  rust.py  typescript.py
victor_coding/lsp/: __init__.py  client.py  config.py  manager.py
victor_coding/native/: __init__.py
victor_coding/performance/: __init__.py  factory.py  protocols.py  registry.py  service_provider.py  settings.py  wrappers.py
victor_coding/refactor/: __init__.py  analyzer.py  manager.py  protocol.py
victor_coding/refactor/transforms/: __init__.py  base.py  extract.py  rename.py
victor_coding/review/: __init__.py  analyzers.py  manager.py  protocol.py  rules.py
victor_coding/rl/: __init__.py  config.py  hooks.py
victor_coding/teams/: __init__.py  personas.py  specs.py
victor_coding/testgen/: __init__.py  analyzer.py  generator.py  manager.py  protocol.py
victor_coding/workflows/: __init__.py  bugfix.py  bugfix.yaml  code_review.yaml  feature.py  feature.yaml  multi_agent_consensus.yaml  provider.py  refactor.yaml  review.py  tdd.yaml  team_node_example.yaml
